# camt053-lsp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  SUPPORT.md  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cflite-pr.yml  ci.yml  codeql.yml  release.yml  scorecard.yml  suite-version-check.yml
camt053_lsp/: __init__.py  server.py
docs/: RELEASING.md  quickstart.md
examples/: 01_compute_diagnostics.py  02_compute_xml_diagnostics.py  03_completion.py  04_hover.py  05_code_actions.py  06_document_symbols.py  07_formatting.py  README.md  lsp_helpers.py
examples/_data/: sample_records.json
fuzz/: fuzz_parser.py
requirements/: fuzz.in  fuzz.txt  lint.in  lint.txt  test.in  test.txt
scripts/: suite-release.sh  suite-status.sh
tests/: conftest.py  test_examples.py  test_lsp_server.py  test_message_type_name.py  test_stress.py  test_version.py
